# MarketDataAPI

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  AZURE_MIGRATION_PLAN.md  CHANGELOG.md  DEPLOYMENT.md  DUAL_ARCHITECTURE_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  SWAGGER_REFACTOR_COMPLETE.md  alembic.ini  api_response_comparison.py  install.bat  install.sh  json_api_handling_explanation.py  mapi.bat  marketdata_cli.py  proposed_unified_model.py  proposed_unified_service.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sql_server_implementation.py  test_api_endpoints.py  test_transparency_service.py  test_updated_service.py  upgrade.bat
.github/: copilot-instructions.md
.github/workflows/: test.yml
alembic/: env.py
alembic-sqlite/: alembic.ini  env.py
alembic-sqlite/versions/: 3fa3405b3e04_initial_schema.py
alembic-sqlserver/: alembic.ini  env.py  script.py.mako
alembic-sqlserver/versions/: 0b0e19e0468e_add_missing_transparency_thresholds_.py  42b243199bb0_remove_entity_relationship_foreign_key_.py  54d6126b6e73_increase_bic_and_ticker_column_sizes.py  9acd72f0165d_initial_schema.py  cb1c09412ddc_remove_lei_foreign_key_constraint_v2.py  e8f7g6h5i4j3_add_authentication_tables.py
alembic/versions/: 20250517_114500_add_supporting_tables.py  20250517_120000_add_last_updated_to_figi.py  20250517_121500_add_entity_addresses_table.py  20250517_122000_add_entity_registrations_table.py  20250517_initial_schema.py  20250518_221508_add_additional_fulins_fields_to_instrument_model.py  (+14 more)
backup_before_migration_20250802_160231/: MIGRATION_PLAN.md  POLYMORPHIC_INHERITANCE_ISSUE.md  alembic.ini  check_database_direct.py  get_test_samples.py  migration_checklist.md  requirements.txt  simple_instrument_test.py  test_server_health.py  working_patterns_analysis.json
config/: .env.example  alembic.ini  pytest.ini
deployment/: Dockerfile  dev.bat  docker-compose.yml  dual-alembic.bat  mapi.bat  mapi.ps1  test-upgrade.bat  upgrade.bat
docs/: CLI_CLEANUP_SUMMARY.md  CLI_MODULAR_ARCHITECTURE.md  CLI_USAGE.md  CLI_Usage.txt  DATABASE_PROTECTION_SUMMARY.md  ENTERPRISE_ARCHITECTURE_PLAN.md  FIRDS_MODEL_UPDATE_SUMMARY.md  FRONTEND_COMPLETION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  azure_sql_setup_complete.md  cases.txt  cfi-20210507-current.txt  cli.txt  cli_orm.txt  enhanced_enrichment_summary.md  enrichment_optimization_strategy.md  esma_columns.md  esma_output.txt  esma_summary.txt  firds_analysis_report.md  firds_d_bond_examples.txt  firds_e_equity_example.txt  fitrs_analysis_report.md  fitrs_analysis_results.json  getting_started.md  gleif_docs.html  isin_test.txt  openapi.yaml  openapi.yaml.backup  orm-progress.txt  schema_guide.md  schema_guide.txt  schema_mapping_config.md
frontend-modern/: README.md  REFACTORING_SUMMARY.md  admin.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
logs/: debug.log.1  debug.log.2
marketdata_api/: __init__.py  config.py  constants.py
scripts/: README.md  analyze_firds_files.py  analyze_production_schema.py  azure_firewall_helper.py  backup_db.py  cli.py  create_migration.py  dual_alembic.py  frontend.py  generate_docs.py  init_azure_sql.py  print_table_columns.py  sync_entity_relationships.py  test_batching.py  test_database_connection.py  test_error_handling.py  test_openfigi.py  test_pruning.py  test_runner.py  update_docs.py  upgrade_production_db.py  validate_refactoring.py
(+365 files in other folders)
